--- a/.pages/index.html
+++ b/.pages/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	%% header.html
+	{% header.html %}
 </head>
 <body>
-	%% nav.html
-	%% hero.html
-	%% features.html
-	%% get-started-banner.html
-	%% footer.html
+	{% nav.html %}
+	{% hero.html %}
+	{% features.html %}
+	{% get-started-banner.html %}
+	{% footer.html %}
 </body>
 </html>
